--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         var _debug = true;
         var _prefixDomain = '';
         if (_debug)
-            _prefixDomain = 'http://www.deploiement.pro';
+            _prefixDomain = 'http://app.deploiement.pro';
 
     </script>
     <script id="microloader" type="text/javascript" src=".sencha/app/microloader/development.js"></script>
