--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                 opacity: 0.8
             }
         }
+/*        .x-toolbar.x-toolbar-dark{
+            background-image: linear-gradient(top, #42b18a,#1676b9 3%,#388e6b);
+        }*/
+
     </style>
     <!-- The line below must be kept intact for Sencha Command to build your application -->
     <script type="text/javascript">
@@ -55,7 +59,7 @@
         var _debug = true;
         var _prefixDomain = '';
         if (_debug)
-            _prefixDomain = 'http://app.deploiement.pro';
+            _prefixDomain = 'http://veolia.e-p.consulting';
 
     </script>
     <script id="microloader" type="text/javascript" src=".sencha/app/microloader/development.js"></script>
