--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         var _debug = true;
         var _prefixDomain = '';
         if (_debug)
-            _prefixDomain = 'http://veolia.e-p.consulting';
+            _prefixDomain = 'http://app.deploiement.pro';
 
     </script>
     <script id="microloader" type="text/javascript" src=".sencha/app/microloader/development.js"></script>
